# CPP-Course-Intel

./: README.md
1. Cache (2Q)/: CMakeLists.txt  README.md
1. Cache (2Q)/include/: 2q_cache.hpp  cache_mem.hpp  cache_test.hpp  page.hpp
1. Cache (2Q)/src/: main.cpp
1. Cache (2Q)/tests/: 100k.txt  10k.txt  120.txt  1k.txt  500k.txt  gen_test.hpp  launch_tests.sh  main.cpp
2. Triangles/: CMakeLists.txt  README.md
2. Triangles/include/: line.hpp  plane.hpp  point.hpp  triangle.hpp  vector.hpp
2. Triangles/src/: line.cpp  main.cpp  plane.cpp  point.cpp  tests.cpp  triangle.cpp  vector.cpp
